# BroskiWebSite

./: .env.example  .gitignore  DESIGN.md  index.html  package-lock.json  package.json  sitemap.xml  tailwind.config.js  tier_test_schema.sql  vercel.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.kiro/specs/demon-tier-tracker/: .config.kiro  design.md  requirements.md  tasks.md
api/: tsconfig.json
api/_lib/: supabaseAdmin.ts  token.ts  upsertRecord.property.test.ts  validate.allornothing.property.test.ts  validate.property.test.ts  validate.test.ts  validate.ts
api/v1/: db-constraints.test.ts  records.allowlist.property.test.ts  records.attribution.property.test.ts  records.auth.property.test.ts  records.example.test.ts  records.integration.test.ts  records.sizeguard.property.test.ts  records.ts
public/: robots.txt  sitemap.xml
public/demonlist/: lista_demon_gd.json
public/icons/categories/: README.md
public/seo/: robots.txt
public/skins/: README.md
scripts/: seed-dtt.mjs
src/: App.css  App.tsx  index.css
src/components/: Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  HorizontalParallaxReveal.tsx  Idols.tsx  McVersionDropdown.tsx  PageAnimator.tsx  ProfileEditor.tsx  RequireAdmin.tsx  RequireAuth.tsx  RouteMeta.tsx  ScrollToTop.tsx  SmoothScroll.tsx  TransitionLink.tsx  UnstableSmp.tsx
src/components/bombparty/: BombPartyGame.tsx  BombPartyLobby.tsx
src/config/: carouselConfig.ts  linksConfig.ts  mcVersions.ts  supabaseClient.ts
src/context/: AuthContext.tsx  LanguageContext.tsx  TransitionContext.tsx
src/features/demon-tier-tracker/: DemonRankPage.tsx  DemonRankView.tsx  DemonTierListPage.tsx  DemonTierListView.test.tsx  DemonTierListView.tsx  StatsViewerPage.tsx  StatsViewerView.tsx  freshness.integration.test.ts  ordering.groupOrder.property.test.ts  ordering.indicator.property.test.ts  ordering.recordOrder.property.test.ts  ordering.ts  publicReadPath.property.test.ts  scoring.test.ts  scoring.ts  smoke.test.ts  types.ts  (+2 more)
src/hooks/: useTiers.ts  useTranslatedNews.ts
src/lib/: supabase.ts
src/pages/: AdminPanel.tsx  AdminSetup.tsx  BombParty.tsx  BombPartyDebug.tsx  Contacts.tsx  Countdown.tsx  CreatorProfile.tsx  FollowedCreators.tsx  Home.tsx  IdeaSubmit.tsx  ManteinancePage.tsx  ModDetail.tsx  ModEdit.tsx  ModUpload.tsx  ModVersionCreate.tsx  Mods.tsx  MyIdeas.tsx  MyMods.tsx  NotFound.tsx  PrivacyPolicy.tsx  Profile.tsx  Projects.tsx  SavedProjects.tsx  SignIn.tsx  SignUp.tsx  Social.tsx  Store.tsx  TermsOfUse.tsx  TierList.tsx  TierlistMaintenance.tsx  VerifyEmail.tsx  Wiki.tsx
tracker-mod/: .gitignore  CMakeLists.txt  README.md  mod.json
tracker-mod/include/tracker/: README.md  completion_filter.h  gating.h  initial_sync.h  live_submission.h  retry_queue.h  serialization.h  token.hpp
tracker-mod/src/: completion_reader.cpp  completion_reader.hpp  diag.hpp  diag_log.cpp  diag_log.hpp  initial_sync.cpp  initial_sync.hpp  live_tracking.cpp  live_tracking.hpp  main.cpp  networking.cpp  networking.hpp  session_state.hpp  token_setting.cpp  token_setting.hpp
tracker-mod/test/: CMakeLists.txt  completion_filter_test.cpp  gating_property_test.cpp  initial_sync_test.cpp  live_submission_test.cpp  networking_integration_test.cpp  perf_main_thread_test.cpp  retry_queue_example_test.cpp  retry_queue_property_test.cpp  serialization_test.cpp  smoke_test.cpp  token_property_test.cpp  token_test.cpp
